--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,7 @@
   "host_permissions": [
     "*://*.strava.com/*",
     "*://www.openstreetmap.org/*",
-    "*://gpx.studio/*",
-    "http://localhost/*"
+    "*://gpx.studio/*"
   ],
   "action": {
     "default_popup": ""
@@ -33,7 +32,7 @@
       "all_frames": true
     },
     {
-      "matches": ["https://www.openstreetmap.org/id*", "https://gpx.studio/app*", "http://localhost/app*"],
+      "matches": ["https://www.openstreetmap.org/id*", "https://gpx.studio/app*"],
       "js": [
         "lib/browser-polyfill.min.js",
         "src/content/inject-client.js",
@@ -60,7 +59,7 @@
         "src/clients/common/hash.js",
         "src/clients/common/layers.js"
       ],
-      "matches": ["*://www.openstreetmap.org/*", "*://gpx.studio/*", "http://localhost/*"]
+      "matches": ["*://www.openstreetmap.org/*", "*://gpx.studio/*"]
     },
     {
       "resources": [
@@ -77,13 +76,7 @@
       "resources": [
         "src/clients/gpx.studio/index.js"
       ],
-      "matches": ["*://gpx.studio/*", "http://localhost/*"]
-    },
-    {
-      "resources": [
-        "src/clients/localhost:4283/index.js"
-      ],
-      "matches": ["http://localhost/*"]
+      "matches": ["*://gpx.studio/*"]
     }
   ],
   "icons": {
