differentiate between DEV and build/production version

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Strava Heatmap",
+  "name": "Strava Heatmap [DEV]",
   "description": "Overlay Strava Global Heatmap in iD & GPX.studio editors to reveal popular routes and patterns.",
   "version": "0.13.3",
   "homepage_url": "https://github.com/julcnx/strava-heatmap-extension",
