--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "description": "This browser extension seamlessly integrates the Strava Global Heatmap into popular mapping editors, including the OpenStreetMap iD editor and GPX Studio, enhancing your mapping and route analysis capabilities.",
   "scripts": {
-    "build": "node scripts/build.js",
-    "build:force": "node scripts/build.js --force"
+    "build": "node scripts/build.js"
   },
   "author": "Julien Etienne <etienne.julien@gmail.com>",
   "license": "MIT",
